--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,16 +1,15 @@
-name: Jekyll site CI
-
+name: Build and Deploy to Github Pages
 on: [push]
-
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ https://davidsheardown.github.io/HTMLbinaryImages/ }}:/srv/jekyll -v ${{ https://davidsheardown.github.io/HTMLbinaryImages/ }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Build and Deploy
+      uses: davidsheardown/github-pages-deploy-action@releases/v3
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: master # The branch the action should deploy to.
+        FOLDER: build # The folder the action should deploy.
