--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,7 +8,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Build and Deploy
-      uses: davidsheardown/HTMLbinaryImages
+      uses: davidsheardown/HTMLbinaryImages@v3
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: master # The branch the action should deploy to.
